` "BOT token va admin ID ni qo'shildi; telegram xabarni yuborish funksiyasi qo'shildi."`

--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,8 @@ STORAGE_BUCKET_MEDIA=name
 STORAGE_BUCKET_STATIC=name
 STORAGE_PATH=127.0.0.1:8081/bucket/
 STORAGE_PROTOCOL=http:
+
+
+# bot
+BOT_TOKEN = 7178118588:AAHr3QkdJxksP_xtCKgrMPNFLeOpkHJqNWc
+ADMIN = 6415392394
